wakeonlan/wol-nodeport.yaml
apiVersion: v1
kind: Service

metadata:
  labels:
    app: wol-website  # Labels identifying the application associated with this Service
  name: wol-nodeport  # Name of the service
  namespace: wol  # Namesapce where the Service resides
  
spec:
  ports:
  - name: wol-nodeport  # Name of the port
    nodePort: 30004 # The port on the node that will be exposed
    port: 8000  # Port on the Service
    targetPort: 8000  # Port to which traffic will be forwarded
  selector: 
    app: wol-website  # Pods with matching labels will be targeted by this Service
  type: NodePort  # Type of Service (NodePort exposes the Service on each Node's IP at a static port)
