wakeonlan/wol-networking.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata: 
  name: wol-networking  # Name of the NetworkPolicy  resource 
  namespace: wol  # Namespace where the NetworkPolicy resides

spec: 
  podSelector: 
    matchLabels:
      app: wol-website  # Select pods with this label to apply the network policy

  ingress:
    - from:
      - ipBlock:
          cidr: 0.0.0.0/0 # Allow traffic from any IP address
      ports:
        - protocol: TCP # Protocol for ingress traffic
          port: 8000  # Allow TCP port
        - protocol: UDP # Protocol for ingress traffic
          port: 9 # Allowed UDP port for Wake-on-LAN

  egress:
    - to: 
        - ipBlock:
            cidr: 0.0.0.0/0 # Allow traffic to any IP address
      ports:
        - protocol: UDP # Protocol for egress traffic
          port: 9 # Allowed UDP port for Wake-on-LAN
